--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Freindly</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand white-text" href="#">Brand</a>
+      <a class="navbar-brand white-text" href="#">Facebook</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,10 +39,18 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+        <span>
+        <button type="submit" class="btn btn-default" style="margin-left:-6px; border-left:1px solid black ;"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+      </span>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="white-text">Akash</a></li>
+        <li>
+          <img src="https://fb-s-d-a.akamaihd.net/h-ak-fbx/v/t1.0-1/p24x24/15826672_1205813279508071_8517884025857111675_n.jpg?oh=6111368d02ffecaf1bf2dadeaefb489c&oe=59E51A27&__gda__=1507127679_a4100c9c92a7153e8ca8c13dd00b072b">
+        </li>
+        <li>
+
+         <a href="#" class="white-text">Akash</a>
+        </li>
         <li title="home"><a href="#" class="white-text"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
         <li title="freind request"><a href="#" class="white-text"><span class="glyphicon glyphicon-user" aria-hidden="user"></span></a></li>
         <li title="messages"><a href="#" class="white-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
@@ -51,11 +59,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Pages</a></li>
+            <li><a href="#">Group</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Log Out</a></li>
           </ul>
         </li>
       </ul>
@@ -163,6 +171,7 @@
                   </div>
                   <div class="panel-footer">Panel footer</div>
                 </div>
+
               </div>
             </div>
             <div class=" hidden-xs hidden-sm col-md-3">
@@ -177,7 +186,14 @@
                   <div role="tabpanel" class="tab-pane active" id="top">
                     <div class="list-group">
                       <a href="#" class="list-group-item ">
-                        <h4 class="list-group-item-heading">List group item heading</h4>
+                        <h4 class="list-group-item-heading">
+                          <div class="list-group">
+                          <a href="#" class="list-group-item active">
+                            <h4 class="list-group-item-heading"></h4>
+                            <p class="list-group-item-text">...</p>
+                          </a>
+                          </div>
+                        </h4>
                         <p class="list-group-item-text">...</p>
                       </a>
                     </div>
