--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Freindly</title>
+    <title>facebook Relative</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,33 +37,30 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search" style=" width: 450px;">
         </div>
-        <span>
-        <button type="submit" class="btn btn-default" style="margin-left:-6px; border-left:1px solid black ;"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-      </span>
+        <button type="submit" class="btn btn-default" style=" margin-left: -6px; border-left: 1px solid black;"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <img src="https://fb-s-d-a.akamaihd.net/h-ak-fbx/v/t1.0-1/p24x24/15826672_1205813279508071_8517884025857111675_n.jpg?oh=6111368d02ffecaf1bf2dadeaefb489c&oe=59E51A27&__gda__=1507127679_a4100c9c92a7153e8ca8c13dd00b072b">
+          <div >
+          <img src="https://fb-s-d-a.akamaihd.net/h-ak-fbx/v/t1.0-1/p24x24/15826672_1205813279508071_8517884025857111675_n.jpg?oh=6111368d02ffecaf1bf2dadeaefb489c&oe=59E51A27&__gda__=1507127679_a4100c9c92a7153e8ca8c13dd00b072b" id="header-img">
+        </div>
         </li>
-        <li>
-
-         <a href="#" class="white-text">Akash</a>
-        </li>
+        <li><a href="#" class="white-text">Akash</a></li>
         <li title="home"><a href="#" class="white-text"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
-        <li title="freind request"><a href="#" class="white-text"><span class="glyphicon glyphicon-user" aria-hidden="user"></span></a></li>
-        <li title="messages"><a href="#" class="white-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
+        <li title="freind request"><a href="#" class="white-text"><span class="glyphicon glyphicon-user" aria-hidden="user"><span class="badge" style="margin-bottom:10px; background-color: red;">10</span></span></a></li>
+        <li title="messages"><a href="#" class="white-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"><span class="badge" style="margin-bottom:10px; background-color: red;">30</span></span></a></li>
         <li title="notification"><a href="#" class="white-text"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a></li>
         <li title="help"><a href="#" class="white-text"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Pages</a></li>
-            <li><a href="#">Group</a></li>
+            <li><a href="#">Akash</a></li>
+            <li><a href="#">Create Page</a></li>
+            <li><a href="#">Manage Page</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Log-Out</a></li>
           </ul>
         </li>
       </ul>
@@ -146,16 +143,32 @@
                     <h3 class="panel-title"><a href="#">Akash Chauhan</a></h3>
                   </div>
                   <div class="panel-body">
-                    <blockquote style ="margin-left: 0 ;">
-          <p>All men who have turned out worth anything have had the chief hand in their own education.</p>
-          <footer>Walter Scott</footer>
-        </blockquote>
-
+                    <blockquote >
+                      <p >All men who have turned out worth anything have had the chief hand in their own education.</p>
+                      <footer>Walter Scott</footer>
+                    </blockquote>
                     <div> <span><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>Like</span>
                         <span><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>Comment</span>
                     </div>
                   </div>
-                  <div class="panel-footer">Panel footer</div>
+                  <div class="panel-footer">
+                    <div class="media">
+                      <div class="media-left">
+                        <a href="#">
+                          <img class="media-object" src="http://via.placeholder.com/32x32">
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <p class="comment"><span><a href="#">Priya Chauhan </a></span>
+                        This is awesome!</p>
+                        <div>
+                          <small>
+                        	<span> <a href="#">Like </a></span> <span> <a href="#">Comment </a></span>
+                          </small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="panel panel-default">
                   <div class="panel-heading">
@@ -171,34 +184,38 @@
                   </div>
                   <div class="panel-footer">Panel footer</div>
                 </div>
-
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><a href="#">Akash Chauhan</a></h3>
+                  </div>
+                  <div class="panel-body">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/kJQP7kiw5Fk" frameborder="0" allowfullscreen></iframe>
+                    <div> <span><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>Like</span>
+                        <span><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>Comment</span>
+                    </div>
+                  </div>
+                  <div class="panel-footer">Panel footer</div>
+                </div>
               </div>
             </div>
             <div class=" hidden-xs hidden-sm col-md-3">
               <div id="sidebar">
                 <ul class="nav nav-tabs" role="tablist">
-                  <li role="presentation" class="active"><a href="#top" aria-controls="home" role="tab" data-toggle="tab">Top Trends</a></li>
-                  <li role="presentation"><a href="#politics" aria-controls="profile" role="tab" data-toggle="tab">Politics</a></li>
-                  <li role="presentation"><a href="#sports" aria-controls="messages" role="tab" data-toggle="tab">Sport</a></li>
+                  <li role="presentation" class="active pull-right"><a href="#top" aria-controls="home" role="tab" data-toggle="tab">Top Trends</a></li>
+                  <li role="presentation" class=" pull-right"><a href="#politics" aria-controls="profile" role="tab" data-toggle="tab">Politics</a></li>
+                  <li role="presentation" class=" pull-right"><a href="#sports" aria-controls="messages" role="tab" data-toggle="tab">Sport</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
-                  <div role="tabpanel" class="tab-pane active" id="top">
+                  <div role="tabpanel" class="tab-pane fade in active" id="top">
                     <div class="list-group">
                       <a href="#" class="list-group-item ">
-                        <h4 class="list-group-item-heading">
-                          <div class="list-group">
-                          <a href="#" class="list-group-item active">
-                            <h4 class="list-group-item-heading"></h4>
-                            <p class="list-group-item-text">...</p>
-                          </a>
-                          </div>
-                        </h4>
+                        <h4 class="list-group-item-heading">List group item heading 1</h4>
                         <p class="list-group-item-text">...</p>
                       </a>
                     </div>
                   </div>
-                  <div role="tabpanel" class="tab-pane" id="politics">
+                  <div role="tabpanel" class="tab-pane fade" id="politics">
                     <div class="list-group">
                       <a href="#" class="list-group-item active">
                         <h4 class="list-group-item-heading">List group item heading</h4>
@@ -206,7 +223,7 @@
                       </a>
                     </div>
                   </div>
-                  <div role="tabpanel" class="tab-pane" id="sports">
+                  <div role="tabpanel" class="tab-pane fade" id="sports">
                     <div class="list-group">
                     <a href="#" class="list-group-item active">
                       <h4 class="list-group-item-heading">List group item heading</h4>
