error resolved in file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <div >
+          <div id="header-img">
           <img src="https://fb-s-d-a.akamaihd.net/h-ak-fbx/v/t1.0-1/p24x24/15826672_1205813279508071_8517884025857111675_n.jpg?oh=6111368d02ffecaf1bf2dadeaefb489c&oe=59E51A27&__gda__=1507127679_a4100c9c92a7153e8ca8c13dd00b072b" id="header-img">
         </div>
         </li>
@@ -189,7 +189,7 @@
                     <h3 class="panel-title"><a href="#">Akash Chauhan</a></h3>
                   </div>
                   <div class="panel-body">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/kJQP7kiw5Fk" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="816" height="459" src="https://www.youtube.com/embed/zpOULjyy-n8" frameborder="0" allowfullscreen></iframe>
                     <div> <span><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>Like</span>
                         <span><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>Comment</span>
                     </div>
