--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
             <div class="hidden-xs col-sm-4 col-md-3">
               <div id="menu">
                 <ul class="nav nav-pills nav-stacked">
-                  <li role="presentation" ><a href="#">Akash</a></li>
-                  <li role="presentation"><a href="#">News feed</a></li>
-                  <li role="presentation"><a href="#">Messanger</a></li>
+                  <li role="presentation" ><a href="#" style="color:black; font-size:18px;">News feed<span class="glyphicon glyphicon-option-horizontal" aria-hidden="true" style ="margin-left:100px; font-size:15px; color:gray;"></span></a></li>
+                  <li role="presentation"><a href="#" style="border-bottom: 1px solid gray;">Messenger<span class="glyphicon glyphicon-envelope" aria-hidden="true" style ="margin-left:115px; font-size:15px; color:gray;"></span></a></li>
                 </ul>
                 <ul class="nav nav-pills nav-stacked">
                   <p class="list-heading">     Shortcuts </p>
-                  <li role="presentation" ><a href="#">Home</a></li>
-                  <li role="presentation"><a href="#">Profile</a></li>
-                  <li role="presentation"><a href="#">Messages</a></li>
+                  <li role="presentation" ><a href="#">Computer Science Lpu<span class="glyphicon glyphicon-lock" aria-hidden="true" style ="margin-left:42px; font-size:15px; color:gray;"></span></a></li>
+                  <li role="presentation"><a href="#">Hackerrank<span class="glyphicon glyphicon-briefcase" aria-hidden="true" style ="margin-left:112px; font-size:15px; color:gray;"></span></a></li>
+                  <li role="presentation"><a href="#">Codechef</a></li>
                 </ul>
                 <ul class="nav nav-pills nav-stacked">
                   <p class="list-heading"> Explorer </p>
