--- a/index.html
+++ b/index.html
@@ -75,17 +75,20 @@
                   <li role="presentation" ><a href="#" style="color:black; font-size:18px;">News feed<span class="glyphicon glyphicon-option-horizontal" aria-hidden="true" style ="margin-left:100px; font-size:15px; color:gray;"></span></a></li>
                   <li role="presentation"><a href="#" style="border-bottom: 1px solid gray;">Messenger<span class="glyphicon glyphicon-envelope" aria-hidden="true" style ="margin-left:115px; font-size:15px; color:gray;"></span></a></li>
                 </ul>
-                <ul class="nav nav-pills nav-stacked">
+                <ul class="nav nav-pills nav-stacked" style="border-bottom: 1px solid grey;">
                   <p class="list-heading">     Shortcuts </p>
-                  <li role="presentation" ><a href="#">Computer Science Lpu<span class="glyphicon glyphicon-lock" aria-hidden="true" style ="margin-left:42px; font-size:15px; color:gray;"></span></a></li>
-                  <li role="presentation"><a href="#">Hackerrank<span class="glyphicon glyphicon-briefcase" aria-hidden="true" style ="margin-left:112px; font-size:15px; color:gray;"></span></a></li>
-                  <li role="presentation"><a href="#">Codechef</a></li>
+                  <li role="presentation" ><a href="#">Computer Science Lpu<span class="glyphicon glyphicon-lock" aria-hidden="true" style =" font-size:15px; color:gray; margin-left:10px;"></span></a></li>
+                  <li role="presentation"><a href="#" >Hackerrank<span class="glyphicon glyphicon-briefcase" aria-hidden="true" style =" font-size:15px; color:gray; margin-left:10px;"></span></a></li>
+                  <li role="presentation"><a href="#">Codechef<span class="glyphicon glyphicon-tower" aria-hidden="true" style =" font-size:15px; color:gray; margin-left:10px;"></span></a></li>
                 </ul>
                 <ul class="nav nav-pills nav-stacked">
                   <p class="list-heading"> Explorer </p>
-                  <li role="presentation" ><a href="#">Home</a></li>
-                  <li role="presentation"><a href="#">Profile</a></li>
-                  <li role="presentation"><a href="#">Messages</a></li>
+                  <li role="presentation" ><a href="#">Events<span class="badge">5</span></a></li>
+                  <li role="presentation"><a href="#">Groups<span class="badge">10</span></a></li>
+                  <li role="presentation"><a href="#">Pages<span class="badge">3</span></a></li>
+                  <li role="presentation"><a href="#">Freindlist</a></li>
+                  <li role="presentation"><a href="#">On this day<span class="badge">4</span></a></li>
+                  <li role="presentation"><a href="#">Pokes</a></li>
                 </ul>
               </div>
             </div>
