--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6">
               <div id="main">
                 <div class="panel panel-default">
-                  <div class="panel-heading" style="height:50px;">
+                  <div class="panel-heading" style="height:50px; margin-top:0;">
                     <!-- <h3 class="panel-title"><a href="#">Akash Chauhan</a></h3> -->
                     <ul class="nav nav-pills">
                       <li role="presentation"><a href="#"><small>Create a post</small></a></li>
@@ -105,7 +105,7 @@
                   </div>
                   <div class="panel-body">
                       <h3 style="color: grey;">
-                        <img src="https://fb-s-d-a.akamaihd.net/h-ak-fbx/v/t1.0-1/p24x24/15826672_1205813279508071_8517884025857111675_n.jpg?oh=6111368d02ffecaf1bf2dadeaefb489c&oe=59E51A27&__gda__=1507127679_a4100c9c92a7153e8ca8c13dd00b072b" id="header-img"style="margin-right:10px;">
+                        <img src="https://fb-s-d-a.akamaihd.net/h-ak-fbx/v/t1.0-1/p24x24/15826672_1205813279508071_8517884025857111675_n.jpg?oh=6111368d02ffecaf1bf2dadeaefb489c&oe=59E51A27&__gda__=1507127679_a4100c9c92a7153e8ca8c13dd00b072b" id="header-img"style="margin-right:10px; height: 40px; width: 40px; border-radius: 50%">
                        What's on your mind ?</h3>
                   </div>
                   <div class="panel-footer" style=" background-color: white;">
