pics and comments

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="http://via.placeholder.com/32x32">
+                          <img class="media-object" src="https://fb-s-a-a.akamaihd.net/h-ak-fbx/v/t1.0-1/c10.0.32.32/p32x32/15135963_1813748202236582_4696363045708737606_n.jpg?oh=8eaeebb22008005d6c23fddb7660f4bf&oe=599F6DEE&__gda__=1506580677_c84c5da976d9283460352b1bdd600957" style="border-radius: 50%;">
                         </a>
                       </div>
                       <div class="media-body">
@@ -147,12 +147,12 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="http://via.placeholder.com/32x32">
+                          <img class="media-object" src="https://fb-s-a-a.akamaihd.net/h-ak-fbx/v/t1.0-1/c10.0.32.32/p32x32/15135963_1813748202236582_4696363045708737606_n.jpg?oh=8eaeebb22008005d6c23fddb7660f4bf&oe=599F6DEE&__gda__=1506580677_c84c5da976d9283460352b1bdd600957" style="border-radius: 50%;">
                         </a>
                       </div>
                       <div class="media-body">
                         <p class="comment"><span><a href="#">Priya Chauhan </a></span>
-                        This is awesome!</p>
+                        Party you are going to buy new lappy!</p>
                         <div>
                           <small>
                         	<span> <a href="#">Like </a></span> <span> <a href="#">Comment </a></span>
@@ -179,12 +179,12 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="http://via.placeholder.com/32x32">
+                          <img class="media-object" src="https://fb-s-a-a.akamaihd.net/h-ak-fbx/v/t1.0-1/c10.0.32.32/p32x32/15135963_1813748202236582_4696363045708737606_n.jpg?oh=8eaeebb22008005d6c23fddb7660f4bf&oe=599F6DEE&__gda__=1506580677_c84c5da976d9283460352b1bdd600957" style="border-radius: 50%;">
                         </a>
                       </div>
                       <div class="media-body">
                         <p class="comment"><span><a href="#">Priya Chauhan </a></span>
-                        This is awesome!</p>
+                        Inspiring Quotes</p>
                         <div>
                           <small>
                         	<span> <a href="#">Like </a></span> <span> <a href="#">Comment </a></span>
@@ -206,7 +206,24 @@
                         <span><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>Comment</span>
                     </div>
                   </div>
-                  <div class="panel-footer">Panel footer</div>
+                  <div class="panel-footer">
+                    <div class="media">
+                      <div class="media-left">
+                        <a href="#">
+                          <img class="media-object" src="https://fb-s-a-a.akamaihd.net/h-ak-fbx/v/t1.0-1/c10.0.32.32/p32x32/15135963_1813748202236582_4696363045708737606_n.jpg?oh=8eaeebb22008005d6c23fddb7660f4bf&oe=599F6DEE&__gda__=1506580677_c84c5da976d9283460352b1bdd600957" style="border-radius: 50%;">
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <p class="comment"><span><a href="#">Priya Chauhan </a></span>
+                        Hahaha nice one</p>
+                        <div>
+                          <small>
+                        	<span> <a href="#">Like </a></span> <span> <a href="#">Comment </a></span>
+                          </small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="panel panel-default">
                   <div class="panel-heading">
@@ -218,7 +235,24 @@
                         <span><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>Comment</span>
                     </div>
                   </div>
-                  <div class="panel-footer">Panel footer</div>
+                  <div class="panel-footer">
+                    <div class="media">
+                      <div class="media-left">
+                        <a href="#">
+                          <img class="media-object" src="https://fb-s-a-a.akamaihd.net/h-ak-fbx/v/t1.0-1/c10.0.32.32/p32x32/15135963_1813748202236582_4696363045708737606_n.jpg?oh=8eaeebb22008005d6c23fddb7660f4bf&oe=599F6DEE&__gda__=1506580677_c84c5da976d9283460352b1bdd600957" style="border-radius: 50%;">
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <p class="comment"><span><a href="#">Priya Chauhan </a></span>
+                        I love this song ! Slowly Slowly</p>
+                        <div>
+                          <small>
+                          <span> <a href="#">Like </a></span> <span> <a href="#">Comment </a></span>
+                          </small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
