--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="main.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -167,10 +170,10 @@
                     <h3 class="panel-title"><a href="#">Akash Chauhan</a></h3>
                   </div>
                   <div class="panel-body">
-                    <blockquote >
-                      <p >All men who have turned out worth anything have had the chief hand in their own education.</p>
-                      <footer>Walter Scott</footer>
-                    </blockquote>
+                    <blockquote>
+                      <p id="quote">All men who have turned out worth anything have had the chief hand in their own education.</p>
+                      <footer class="pull-right">Walter name likh dena </footer>
+                  </blockquote>
                     <div> <span><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>Like</span>
                         <span><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>Comment</span>
                     </div>
@@ -257,42 +260,46 @@
               </div>
             </div>
             <div class=" hidden-xs hidden-sm col-md-3">
-              <div id="sidebar">
-                <ul class="nav nav-tabs" role="tablist">
-                  <li role="presentation" class="active pull-right"><a href="#top" aria-controls="home" role="tab" data-toggle="tab">Top Trends</a></li>
-                  <li role="presentation" class=" pull-right"><a href="#politics" aria-controls="profile" role="tab" data-toggle="tab">Politics</a></li>
-                  <li role="presentation" class=" pull-right"><a href="#sports" aria-controls="messages" role="tab" data-toggle="tab">Sport</a></li>
+              <div id="sidebar"><ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+                <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
+                <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+                <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
               </ul>
-              <!-- Tab panes -->
+
               <div class="tab-content">
-                  <div role="tabpanel" class="tab-pane fade in active" id="top">
-                    <div class="list-group">
-                      <a href="#" class="list-group-item ">
-                        <h4 class="list-group-item-heading">List group item heading 1</h4>
-                        <p class="list-group-item-text">...</p>
-                      </a>
-                    </div>
-                  </div>
-                  <div role="tabpanel" class="tab-pane fade" id="politics">
-                    <div class="list-group">
-                      <a href="#" class="list-group-item active">
-                        <h4 class="list-group-item-heading">List group item heading</h4>
-                        <p class="list-group-item-text">...</p>
-                      </a>
-                    </div>
-                  </div>
-                  <div role="tabpanel" class="tab-pane fade" id="sports">
-                    <div class="list-group">
-                    <a href="#" class="list-group-item active">
-                      <h4 class="list-group-item-heading">List group item heading</h4>
-                      <p class="list-group-item-text">...</p>
-                    </a>
-                    </div>
-                  </div>
+                <div id="home" class="tab-pane fade in active">
+                  <div class="list-group">
+                    <a href="#" class="list-group-item active ">
+                  <h3>HOME</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </a>
+                </div>
               </div>
+                <div id="menu1" class="tab-pane fade">
+                  <div id="home" class="tab-pane fade in active">
+                    <div class="list-group">
+                        <a href="#" class="list-group-item active ">
+
+                  <h3>Menu 1</h3>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </a>
+            </div>
+                </div>
+              </div>
+
+                <div id="menu2" class="tab-pane fade">
+                  <h3>Menu 2</h3>
+                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                </div>
+                <div id="menu3" class="tab-pane fade">
+                  <h3>Menu 3</h3>
+                  <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                </div>
               </div>
             </div>
           </div>
+
           <!--footer starts here-->
           <ul class="nav nav-pills pull-right">
                 <li role="presentation" ><a href="#">About Us</a></li>
@@ -307,8 +314,8 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+
   </body>
 </html>
