--- a/index.html
+++ b/index.html
@@ -261,20 +261,37 @@
             </div>
             <div class=" hidden-xs hidden-sm col-md-3">
               <div id="sidebar"><ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-                <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
-                <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
-                <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
+                <li class="active"><a data-toggle="tab" href="#home"><small>Trending</small><span class="glyphicon glyphicon-fire" aria-hidden="true" style="margin-left:21px;"></span></a></li>
+                <li><a data-toggle="tab" href="#menu1"><span class="glyphicon glyphicon-education" aria-hidden="true"></span></a></li>
+                <li><a data-toggle="tab" href="#menu2"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></a></li>
+                <li><a data-toggle="tab" href="#menu3"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span></a></li>
               </ul>
 
               <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
-                  <div class="list-group">
-                    <a href="#" class="list-group-item active ">
-                  <h3>HOME</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </a>
-                </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Google</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px">
+                      <snall>Google Fined Record $2.7 Billion in E.U. Antitrust Ruling </small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Indian Presidential Election</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px">
+                      <snall>Flanked by Sonia and Manmohan, Meria Kumar Files Nomination Papers</small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Ajit Doval</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px">
+                      <snall>When Ajit Doval saved Modi from embarrassment at White House </small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Goverment of India</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px">
+                      <snall>Aahaar-PAN Linking Mandatory From July 1, Goverment Notifies Rules </small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Facebook</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px">
+                      <snall>Facebook Hits 2 billion-user mark, doubling in size since 2012</small>
+                    </div>
+                  </div>
+
               </div>
                 <div id="menu1" class="tab-pane fade">
                   <div id="home" class="tab-pane fade in active">
