sidebar work is finished

--- a/index.html
+++ b/index.html
@@ -293,25 +293,74 @@
                   </div>
 
               </div>
-                <div id="menu1" class="tab-pane fade">
+                <div id="menu1" class="tab-pane fade" style=" background-color:white;">
                   <div id="home" class="tab-pane fade in active">
-                    <div class="list-group">
-                        <a href="#" class="list-group-item active ">
-
-                  <h3>Menu 1</h3>
-                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </a>
-            </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Mitch McConnell</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                      <snall>Senate delays health care vote until ater July 4 recess</small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Indian Presidential Election</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                      <snall>Flanked by Sonia and Manmohan, Meria Kumar Files Nomination Papers</small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Carcass, Venezuela</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                      <snall>Venezuela: police helicopter attacks supreme court with grenades</small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Rex Trillerson</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                      <snall>Tillerson urges negotation in Gulf crissis but Saudis say no </small>
+                    </div>
+                    <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Delhi Legislative Assembly</div>
+                    <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                      <snall>Two Men Throw Flyers in delhi Assembl. Thrashed By AAP Lawmakers</small>
+                    </div>
                 </div>
               </div>
 
-                <div id="menu2" class="tab-pane fade">
-                  <h3>Menu 2</h3>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                <div id="menu2" class="tab-pane fade" style=" background-color:white;">
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Petya Cyberattack</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>'Petya' ransomware attack strikes companies across Europe and US</small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Jwahrlal Nehru Port</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>Pertya Ransomware Hits Operations at India's Largest Container Port</small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Marine Drive Mumbai</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>High tide turns Tragic, washes away girl at Marine Drive </small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>The Astrophysical Journal</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>Astronomers discover orbiting ssupermassive black holes for the first time in distant...</small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Samsung Galaxy Note</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>Samsung will reportedly review th Galaxy Note 7 with a Kprea-only..</small>
+                  </div>
                 </div>
-                <div id="menu3" class="tab-pane fade">
-                  <h3>Menu 3</h3>
-                  <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                <div id="menu3" class="tab-pane fade" style=" background-color:white;">
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Google</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>Google Fined Record $2.7 Billion in E.U. Antitrust Ruling </small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Indian Presidential Election</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>Flanked by Sonia and Manmohan, Meria Kumar Files Nomination Papers</small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Ajit Doval</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>When Ajit Doval saved Modi from embarrassment at White House </small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Goverment of India</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>Aahaar-PAN Linking Mandatory From July 1, Goverment Notifies Rules </small>
+                  </div>
+                  <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Facebook</div>
+                  <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
+                    <snall>Facebook Hits 2 billion-user mark, doubling in size since 2012</small>
+                  </div>
                 </div>
               </div>
             </div>
