header issue resolving

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <snall>Samsung will reportedly review th Galaxy Note 7 with a Kprea-only..</small>
                   </div>
                 </div>
-                <div id="menu3" class="tab-pane fade" style=" background-color:white;">
+                <div id="menu3" class="tab-pane fade" style=" background-color:white; margin-right:0px;">
                   <div class="panel-heading" style="background-color: white; color:#365899;font-weight: bold;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; border-bottom: 1px solid white;"><span class="glyphicon glyphicon-menu-right" aria-hidden="true" style="margin-right:5px;"></span>Google</div>
                   <div class="panel-body" style="color: #1d2129; margin-left:5px; padding-top :0px; background-color:white;">
                     <snall>Google Fined Record $2.7 Billion in E.U. Antitrust Ruling </small>
